[project]
name = "text-node-with-comments"
description = "multiline text node that strips c-style comments (i.e.'//' and '/* ... */') before passing output string downstream "
version = "1.0.1"
license = { file = "LICENSE.txt" }
dependencies  = []

[project.urls]
Repository = "https://github.com/cdxOo/comfyui-text-node-with-comments"

[tool.comfy]
PublisherId = "cdxoo"
DisplayName = "Text Node With Comments (@cdxoo)" 
